--- a/home.html
+++ b/home.html
@@ -163,21 +163,27 @@
         <img src="src/data/logo-footer.png" alt="logo.png">
         <div id="redes">
             <div>
-                <img src="src/data/facebook.png" alt="facebook.png">
+                a <a href="https://www.facebook.com/">
+              <img src="src/data/facebook.png" alt="facebook.png">
                 <p>FACEBOOK</p>
                 <p>platinocinemas</p>
-            </div>
-            <div>
-                <img src="src/data/twitter.png" alt="twitter.png">
-                <p>TWITTER</p>
-                <p>platinocinemas</p>
+                </a>
 
             </div>
             <div>
+                <a href="https://twitter.com/?lang=es">
+                <img src="src/data/twitter.png" alt="twitter.png">
+                 <p>TWITTER</p>
+                <p>platinocinemas</p>
+                </a>
+               
+            </div>
+            <div>
+                <a href="https://www.instagram.com/">
                 <img src="src/data/instagram.png" alt="instagram.png">
                 <p>INSTAGRAM</p>
                 <p>platinocinemas</p>
-
+                 </a>
             </div>
         </div>
     </footer>
