--- a/ciudad.html
+++ b/ciudad.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <link rel="stylesheet" href="/src/style/ciudad.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <figure>
             <img src="./src/data/logo.png" alt="logo.png" id="platinum-logo">
         </figure>
         <nav>
-             <ul>
+            <ul>
                 <a href="./home.html">
                     <li>HOME</li>
                 </a>
@@ -31,13 +33,26 @@
                     <li>ABOUT US</li>
                 </a>
             </ul>
-         </nav>
+        </nav>
 
     </header>
 
-    <main>
-      
-
+    <main class="city">
+        <div class="selector">
+            <div class="city-information">
+                    Selecciona tu ciudad y el teatro donde
+                    deseas ver tu película.
+            </div>
+            <div class="select-main">
+                <div class="select-city"></div>
+                <div class="select-cinema"></div>
+            </div>
+            <div class="botton">
+                <div class="botton-information">
+                    Aceptar
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -45,30 +60,31 @@
         <div id="redes">
             <div>
                 a <a href="https://www.facebook.com/">
-              <img src="src/data/facebook.png" alt="facebook.png">
-                <p>FACEBOOK</p>
-                <p>platinocinemas</p>
+                    <img src="src/data/facebook.png" alt="facebook.png">
+                    <p>FACEBOOK</p>
+                    <p>platinocinemas</p>
                 </a>
 
             </div>
             <div>
                 <a href="https://twitter.com/?lang=es">
-                <img src="src/data/twitter.png" alt="twitter.png">
-                 <p>TWITTER</p>
-                <p>platinocinemas</p>
+                    <img src="src/data/twitter.png" alt="twitter.png">
+                    <p>TWITTER</p>
+                    <p>platinocinemas</p>
                 </a>
-               
+
             </div>
             <div>
                 <a href="https://www.instagram.com/">
-                <img src="src/data/instagram.png" alt="instagram.png">
-                <p>INSTAGRAM</p>
-                <p>platinocinemas</p>
-                 </a>
+                    <img src="src/data/instagram.png" alt="instagram.png">
+                    <p>INSTAGRAM</p>
+                    <p>platinocinemas</p>
+                </a>
             </div>
         </div>
     </footer>
 
     <script src="src/javascript/ciudad.js"></script>
 </body>
+
 </html>
