primeros pasos para asignar peliculas
metodo para cambiar de pelis, primeros pasos

--- a/compra.html
+++ b/compra.html
@@ -38,8 +38,10 @@
     <main>
        <div id="banner">
             <figure>
-                <img src="./src/data/banner-joker.png" alt="logo.png">
+                    <img src="./src/data/banner-joker.png" alt="logo.png" class="bannerMovie">
             </figure>
+                
+            
         </div>
         <div id="content">
 
@@ -141,5 +143,6 @@
             </div>
         </div>
     </footer>
+    <script src="./src/javascript/compra.js"></script>
 </body>
 </html>
