cambios en la pantalla Compra
cambios en la pantalla de compra para variar el contenido

--- a/compra.html
+++ b/compra.html
@@ -47,20 +47,20 @@
 
             <div id="movie-info" >
                 <figure>
-                    <img src="./src/data/joker-poster 2.png" alt="logo.png" class="posterMovie">
+                    <img class="imagePoster" rc="./src/data/joker-poster 2.png" alt="logo.png" class="posterMovie">
                 </figure>
 
                 <div class="title">TÍTULO ORIGINAL</div>
                 <hr>
-                <div class="text" class="titleMovie">Joker</div>
+                <div class="text titleMovie">Joker</div>
                 
                 <div class="title">DIRECTOR</div>
                 <hr>
-                <div class="text" class="directorMovie">Todd Philips</div>
+                <div class="text directorMovie">Todd Philips</div>
 
                 <div class="title">REPARTO</div>
                 <hr>
-                <div class="text" class="castingMovie">
+                <div class="text castingMovie">
                         Joaquin Phoenix <br>
                         Robert De Niro <br>
                         Zazie Beetz <br>
@@ -70,7 +70,7 @@
 
                 <div class="title">SINOPSIS</div>
                 <hr>
-                <div class="text" class="sinopsisMovie">La pasión de Arthur Fleck,<br>
+                <div class="text sinopsisMovie">La pasión de Arthur Fleck,<br>
                     un hombre ignorado por la<br>
                     sociedad, es hacer reír a la<br>
                     gente. Sin embargo, una<br>
@@ -144,5 +144,7 @@
         </div>
     </footer>
     <script src="./src/javascript/compra.js"></script>
+    <script src="./src/javascript/handleMovie.js"></script>
+    <script src="./src/javascript/handleMovieLocal.js"></script>
 </body>
 </html>
