--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
 
         <div class="flex-container" >
 
-            <a href="compra.html" ID="1">
+            <a href="#" ID="0" class="movieFrame">
                 <li class="flex-item">
                     <img src="src/data/bromas.png" alt="joker">
                     <div class="text-info-up">
@@ -64,7 +64,7 @@
                 </li>
             </a>
 
-            <a href="compra.html" ID="2">
+            <a href="#" ID="1" class="movieFrame">
                 <li class="flex-item">
                     <img src="src/data/dedicada.png" alt="joker">
                     <div class="text-info-up">
@@ -75,7 +75,7 @@
                 </li>
             </a>
 
-            <a href="compra.html" ID="3">
+            <a href="#" ID="2" class="movieFrame">
                 <li class="flex-item">
                     <img src="src/data/doctor.png" alt="joker">
                     <div class="text-info-up">
@@ -85,7 +85,7 @@
                     </div>
                 </li>
             </a>
-            <a href="compra.html" ID="4">
+            <a href="#" ID="3" class="movieFrame">
                 <li class="flex-item">
                     <img src="src/data/terminator.png" alt="joker">
                     <div class="text-info-up">
@@ -96,7 +96,7 @@
                 </li>
             </a>
 
-            <a href="compra.html" ID="5">
+            <a href="#" ID="4"  class="movieFrame">
                 <li class="flex-item">
                     <img class="img" src="src/data/malefica.png" alt="joker">
                     <div class="text-info-up">
@@ -118,7 +118,7 @@
 
         <div class="flex-container">
 
-            <a href="compra.html" ID="6">
+            <a href="#" ID="6">
                 <li class="flex-item">
                     <img src="src/data/infierno.png" alt="joker">
                     <div class="text-info-up">
@@ -127,7 +127,7 @@
                 </li>
             </a>
 
-            <a href="compra.html" ID="7">
+            <a href="#" ID="7">
                 <li class="flex-item">
                     <img src="src/data/ouija.png" alt="joker">
                     <div class="text-info-up">
@@ -136,7 +136,7 @@
                 </li>
             </a>
 
-            <a href="compra.html" ID="8">
+            <a href="#" ID="8">
                 <li class="flex-item">
                     <img src="src/data/huérfanos.png" alt="joker">
                     <div class="text-info-up">
@@ -220,6 +220,9 @@
 
     <script src="src/javascript/home.js"></script>
     <script src="src/javascript/compra.js"> </script>
+    <script src="src/javascript/handleMovie.js"> </script>
+    <script src="src/javascript/handleMovieLocal.js"> </script>
+
 </body>
 
 </html>
