--- a/compra.html
+++ b/compra.html
@@ -52,34 +52,19 @@
 
                 <div class="title">TÍTULO ORIGINAL</div>
                 <hr>
-                <div class="text titleMovie">Joker</div>
+                <div class="text titleMovie"></div>
                 
                 <div class="title">DIRECTOR</div>
                 <hr>
-                <div class="text directorMovie">Todd Philips</div>
+                <div class="text directorMovie"></div>
 
                 <div class="title">REPARTO</div>
                 <hr>
-                <div class="text castingMovie">
-                        Joaquin Phoenix <br>
-                        Robert De Niro <br>
-                        Zazie Beetz <br>
-                        Bill Camp <br>
-                        Frances Conroy <br>
-                        Brett Cullen</div>
+                <div class="text castingMovie"></div>
 
                 <div class="title">SINOPSIS</div>
                 <hr>
-                <div class="text sinopsisMovie">La pasión de Arthur Fleck,<br>
-                    un hombre ignorado por la<br>
-                    sociedad, es hacer reír a la<br>
-                    gente. Sin embargo, una<br>
-                    serie de trágicos sucesos <br>
-                    harán que su visión del<br>
-                    mundo se distorsione<br>
-                    considerablemente<br>
-                    convirtiéndolo en un<br>
-                    brillante criminal.<br>
+                <div class="text sinopsisMovie">
                 </div>
 
             </div>
