--- a/ciudad.html
+++ b/ciudad.html
@@ -47,7 +47,7 @@
                 
                     <div class="custom-select" style="width:200px;">
                             <select >
-                              <option value="0" class="listaCiudad">Seleccione Ciudad:</option>
+                              <option value="0" class="listaCiudad">Seleccione Ciudad</option>
                               <option value="1" class="listaCiudad">Cali</option>
                               <option value="2" class="listaCiudad">Bogotá</option>
                               <option value="3" class="listaCiudad">Medellin</option>
@@ -56,7 +56,7 @@
 
                   <div class="custom-select" style="width:200px;">
                              <select>
-                                <option value="0" class="listaCine">Seleccione Cine:</option>
+                                <option value="0" class="listaCine">Seleccione Cine</option>
                                 <option value="1" class="listaCine">Principal</option>
                                 <option value="2" class="listaCine">Centro</option>
                             </select>
