--- a/compra.html
+++ b/compra.html
@@ -89,8 +89,7 @@
                 </div>
                 <div class="title2">ASIENTOS</div>
                 <hr>
-                <div>
-                    
+                <div id="canvas">
                 </div>
 
             </div>
@@ -147,6 +146,8 @@
             </div>
         </div>
     </footer>
+   
+    <script src="./src/lib/p5.js"></script>
     <script src="./src/javascript/compra.js"></script>
     <script src="./src/javascript/handleMovie.js"></script>
     <script src="./src/javascript/handleMovieLocal.js"></script>
