--- a/compra.html
+++ b/compra.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure>
-            <img src="./src/data/logo.png" alt="logo.png" id="platinum-logo">
+            <a href="./home.html"><img src="./src/data/logo.png" alt="logo.png" id="platinum-logo"></a>
         </figure>
         <nav>
              <ul>
