--- a/compra.html
+++ b/compra.html
@@ -91,6 +91,7 @@
                 <hr>
                 <div id="canvas">
                 </div>
+                <button class="button-compras">Continuar</button>
 
             </div>
 
