--- a/pago.html
+++ b/pago.html
@@ -51,12 +51,16 @@
                     <div class="items-line">
                         <div style="width: 45%;">
                                 Fecha
-                                <div class="box-item"></div>
+                                <div class="box-item">
+                                    <div>19/11/2019</div>
+                                </div>
                         </div>
                         <div style="width: 45%;">
 
                                 Hora
-                                <div class="box-item"></div>
+                                <div class="box-item">
+                                    <div class="horario"></div>
+                                </div>
                         </div>
                                 
                     </div>
@@ -68,7 +72,11 @@
                                 </div>
                                 <div style="width: 45%;">
                                         Posición
-                                        <div class="box-item"></div>
+                                        <div class="box-item">
+                                            <div class="asientos">
+
+                                            </div>
+                                        </div>
                                 </div>
                               
                         </div>
@@ -207,8 +215,8 @@
         </div>
     </footer>
 
-    <script src="src/javascript/home.js"></script>
-    <script src="src/javascript/compra.js"> </script>
+
+    <script src="./src/javascript/handleMovieInfo.js"></script>
     <script src="src/javascript/pago.js"></script>
     <script src="src/javascript/handleMovie.js"> </script>
     <script src="src/javascript/handleMovieLocal.js"> </script>
