--- a/pago.html
+++ b/pago.html
@@ -46,6 +46,7 @@
                     <div>
                         Pelicula
                         <div class="box-item">
+                            <div class="Pelicula"></div>
                         </div>
                     </div>
                     <div class="items-line">
