--- a/compra.html
+++ b/compra.html
@@ -12,18 +12,12 @@
 <body>
     <header>
         <figure>
-            <a href="./home.html"><img src="./src/data/logo.png" alt="logo.png" id="platinum-logo"></a>
+            <img src="./src/data/logo.png" alt="logo.png" id="platinum-logo">
         </figure>
         <nav>
-             <ul>
+            <ul>
                 <a href="./home.html">
                     <li>HOME</li>
-                </a>
-                <a href="./pre-venta.html">
-                    <li>PRE-VENTA</li>
-                </a>
-                <a href="./reservas.html">
-                    <li>RESERVAS</li>
                 </a>
                 <a href="./ciudad.html">
                     <li>CAMBIAR CIUDAD</li>
@@ -32,7 +26,7 @@
                     <li>ABOUT US</li>
                 </a>
             </ul>
-         </nav>
+        </nav>
 
     </header>
     <main>
